--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Avaliação 360°</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body class="bg-gray-100 min-h-screen flex flex-col items-center p-6">
   <div class="w-full max-w-6xl bg-white shadow-xl rounded-xl p-10">
@@ -21,12 +22,12 @@
         </select>
       </section>
 
-      <!-- Gerente -->
+      <!-- GERENTE -->
       <section>
         <h2 class="text-2xl font-semibold mb-4">1. Avaliação do Gerente – Márcio Merçon</h2>
         <div class="space-y-6">
-          <!-- TODAS AS PERGUNTAS DO GERENTE -->
-          <div><label>Como você avalia a capacidade do gerente de mobilizar e envolver a equipe?</label>
+          <div>
+            <label>Como você avalia a capacidade do gerente de mobilizar e envolver a equipe?</label>
             <div class="flex gap-4">
               <label><input type="radio" name="gerente_mobilizar" value="1" required> Muito Insatisfatório</label>
               <label><input type="radio" name="gerente_mobilizar" value="2"> Insatisfatório</label>
@@ -35,130 +36,29 @@
               <label><input type="radio" name="gerente_mobilizar" value="5"> Muito Satisfatório</label>
             </div>
           </div>
-
-          <div><label>Exerce o feedback, praticando o elogio e a crítica, reconhecendo e compartilhando resultados com a equipe.</label>
-            <div class="flex gap-4">
-              <label><input type="radio" name="gerente_feedback" value="1" required> Muito Insatisfatório</label>
-              <label><input type="radio" name="gerente_feedback" value="2"> Insatisfatório</label>
-              <label><input type="radio" name="gerente_feedback" value="3"> Regular</label>
-              <label><input type="radio" name="gerente_feedback" value="4"> Satisfatório</label>
-              <label><input type="radio" name="gerente_feedback" value="5"> Muito Satisfatório</label>
-            </div>
-          </div>
-
-          <div><label>O gerente comunica informações de forma clara e eficiente?</label>
-            <div class="flex gap-4">
-              <label><input type="radio" name="gerente_comunicacao" value="1" required> Muito Insatisfatório</label>
-              <label><input type="radio" name="gerente_comunicacao" value="2"> Insatisfatório</label>
-              <label><input type="radio" name="gerente_comunicacao" value="3"> Regular</label>
-              <label><input type="radio" name="gerente_comunicacao" value="4"> Satisfatório</label>
-              <label><input type="radio" name="gerente_comunicacao" value="5"> Muito Satisfatório</label>
-            </div>
-          </div>
-
-          <div><label>Como o gerente lida com conflitos dentro da equipe? Você se sente ouvido durante esses momentos?</label>
-            <div class="flex gap-4">
-              <label><input type="radio" name="gerente_conflitos" value="1" required> Muito Insatisfatório</label>
-              <label><input type="radio" name="gerente_conflitos" value="2"> Insatisfatório</label>
-              <label><input type="radio" name="gerente_conflitos" value="3"> Regular</label>
-              <label><input type="radio" name="gerente_conflitos" value="4"> Satisfatório</label>
-              <label><input type="radio" name="gerente_conflitos" value="5"> Muito Satisfatório</label>
-            </div>
-          </div>
-
-          <div><label>O gerente demonstra respeito e empatia em suas interações com os membros da equipe?</label>
-            <div class="flex gap-4">
-              <label><input type="radio" name="gerente_empatia" value="1" required> Muito Insatisfatório</label>
-              <label><input type="radio" name="gerente_empatia" value="2"> Insatisfatório</label>
-              <label><input type="radio" name="gerente_empatia" value="3"> Regular</label>
-              <label><input type="radio" name="gerente_empatia" value="4"> Satisfatório</label>
-              <label><input type="radio" name="gerente_empatia" value="5"> Muito Satisfatório</label>
-            </div>
-          </div>
-
-          <div><label>O gerente está disponível para oferecer apoio quando necessário? Como você avalia a sua acessibilidade?</label>
-            <div class="flex gap-4">
-              <label><input type="radio" name="gerente_apoio" value="1" required> Muito Insatisfatório</label>
-              <label><input type="radio" name="gerente_apoio" value="2"> Insatisfatório</label>
-              <label><input type="radio" name="gerente_apoio" value="3"> Regular</label>
-              <label><input type="radio" name="gerente_apoio" value="4"> Satisfatório</label>
-              <label><input type="radio" name="gerente_apoio" value="5"> Muito Satisfatório</label>
-            </div>
-          </div>
-
-          <div><label>O gerente reconhece e valoriza o trabalho dos servidores?</label>
-            <div class="flex gap-4">
-              <label><input type="radio" name="gerente_reconhecimento" value="1" required> Muito Insatisfatório</label>
-              <label><input type="radio" name="gerente_reconhecimento" value="2"> Insatisfatório</label>
-              <label><input type="radio" name="gerente_reconhecimento" value="3"> Regular</label>
-              <label><input type="radio" name="gerente_reconhecimento" value="4"> Satisfatório</label>
-              <label><input type="radio" name="gerente_reconhecimento" value="5"> Muito Satisfatório</label>
-            </div>
-          </div>
-
-          <div><label>Você recebe feedback do seu gerente em uma periodicidade satisfatória?</label>
-            <div class="flex gap-4">
-              <label><input type="radio" name="gerente_periodicidade" value="1" required> Muito Insatisfatório</label>
-              <label><input type="radio" name="gerente_periodicidade" value="2"> Insatisfatório</label>
-              <label><input type="radio" name="gerente_periodicidade" value="3"> Regular</label>
-              <label><input type="radio" name="gerente_periodicidade" value="4"> Satisfatório</label>
-              <label><input type="radio" name="gerente_periodicidade" value="5"> Muito Satisfatório</label>
-            </div>
-          </div>
-
-          <div><label>Você se sente à vontade para expressar suas preocupações e opiniões ao gerente?</label>
-            <div class="flex gap-4">
-              <label><input type="radio" name="gerente_confianca" value="1" required> Muito Insatisfatório</label>
-              <label><input type="radio" name="gerente_confianca" value="2"> Insatisfatório</label>
-              <label><input type="radio" name="gerente_confianca" value="3"> Regular</label>
-              <label><input type="radio" name="gerente_confianca" value="4"> Satisfatório</label>
-              <label><input type="radio" name="gerente_confianca" value="5"> Muito Satisfatório</label>
-            </div>
-          </div>
-
-          <div><label>O gerente comunica claramente as expectativas em relação ao seu trabalho?</label>
-            <div class="flex gap-4">
-              <label><input type="radio" name="gerente_expectativas" value="1" required> Muito Insatisfatório</label>
-              <label><input type="radio" name="gerente_expectativas" value="2"> Insatisfatório</label>
-              <label><input type="radio" name="gerente_expectativas" value="3"> Regular</label>
-              <label><input type="radio" name="gerente_expectativas" value="4"> Satisfatório</label>
-              <label><input type="radio" name="gerente_expectativas" value="5"> Muito Satisfatório</label>
-            </div>
-          </div>
-
-          <div><label>Como o gerente aborda e resolve problemas que surgem em sua equipe? Você se sente apoiado nesse processo?</label>
-            <div class="flex gap-4">
-              <label><input type="radio" name="gerente_resolucao" value="1" required> Muito Insatisfatório</label>
-              <label><input type="radio" name="gerente_resolucao" value="2"> Insatisfatório</label>
-              <label><input type="radio" name="gerente_resolucao" value="3"> Regular</label>
-              <label><input type="radio" name="gerente_resolucao" value="4"> Satisfatório</label>
-              <label><input type="radio" name="gerente_resolucao" value="5"> Muito Satisfatório</label>
-            </div>
-          </div>
-
-          <div><label>O gerente incentiva oportunidades de aprendizado e desenvolvimento profissional?</label>
-            <div class="flex gap-4">
-              <label><input type="radio" name="gerente_desenvolvimento" value="1" required> Muito Insatisfatório</label>
-              <label><input type="radio" name="gerente_desenvolvimento" value="2"> Insatisfatório</label>
-              <label><input type="radio" name="gerente_desenvolvimento" value="3"> Regular</label>
-              <label><input type="radio" name="gerente_desenvolvimento" value="4"> Satisfatório</label>
-              <label><input type="radio" name="gerente_desenvolvimento" value="5"> Muito Satisfatório</label>
-            </div>
-          </div>
+          <!-- ...repete as outras perguntas do gerente -->
         </div>
         <textarea name="feedback_gerente" placeholder="Feedback adicional sobre o gerente..."
           class="w-full border rounded p-2 mt-4"></textarea>
       </section>
 
-      <!-- Chefes de Núcleo -->
+      <!-- CHEFE DE NÚCLEO -->
       <section>
         <h2 class="text-2xl font-semibold mb-4">2. Avaliação dos Chefes de Núcleo</h2>
 
         <!-- Maycon -->
         <div class="space-y-6 bg-gray-50 p-4 rounded">
           <h3 class="font-bold text-lg text-indigo-700">Maycon</h3>
-          <!-- 🔁 Aqui você repete todas as perguntas específicas do chefe de núcleo (visão estratégica, conflitos, empatia, etc) -->
-          <!-- Estrutura idêntica à do gerente, só muda o name para maycon_*** -->
+          <div><label>Como você avalia a capacidade do chefe de núcleo de mobilizar e envolver a equipe?</label>
+            <div class="flex gap-4">
+              <label><input type="radio" name="maycon_mobilizar" value="1" required> Muito Insatisfatório</label>
+              <label><input type="radio" name="maycon_mobilizar" value="2"> Insatisfatório</label>
+              <label><input type="radio" name="maycon_mobilizar" value="3"> Regular</label>
+              <label><input type="radio" name="maycon_mobilizar" value="4"> Satisfatório</label>
+              <label><input type="radio" name="maycon_mobilizar" value="5"> Muito Satisfatório</label>
+            </div>
+          </div>
+          <!-- ...repete as outras perguntas do Maycon -->
           <textarea name="feedback_maycon" placeholder="Feedback adicional sobre o chefe Maycon..."
             class="w-full border rounded p-2 mt-4"></textarea>
         </div>
@@ -166,13 +66,22 @@
         <!-- Luciane -->
         <div class="space-y-6 bg-gray-50 p-4 rounded mt-6">
           <h3 class="font-bold text-lg text-indigo-700">Luciane</h3>
-          <!-- 🔁 Mesmo esquema do Maycon, mas names luciane_*** -->
+          <div><label>Como você avalia a capacidade da chefe de núcleo de mobilizar e envolver a equipe?</label>
+            <div class="flex gap-4">
+              <label><input type="radio" name="luciane_mobilizar" value="1" required> Muito Insatisfatório</label>
+              <label><input type="radio" name="luciane_mobilizar" value="2"> Insatisfatório</label>
+              <label><input type="radio" name="luciane_mobilizar" value="3"> Regular</label>
+              <label><input type="radio" name="luciane_mobilizar" value="4"> Satisfatório</label>
+              <label><input type="radio" name="luciane_mobilizar" value="5"> Muito Satisfatório</label>
+            </div>
+          </div>
+          <!-- ...repete as outras perguntas da Luciane -->
           <textarea name="feedback_luciane" placeholder="Feedback adicional sobre a chefe Luciane..."
             class="w-full border rounded p-2 mt-4"></textarea>
         </div>
       </section>
 
-      <!-- Colegas -->
+      <!-- COLEGAS -->
       <section id="secaoColegas" style="display:none;">
         <h2 class="text-2xl font-semibold mb-4">3. Avaliação entre Colegas</h2>
         <div id="colegas-container" class="space-y-10"></div>
@@ -188,10 +97,21 @@
     </form>
   </div>
 
+  <!-- GRÁFICO -->
+  <div class="w-full max-w-6xl bg-white shadow-xl rounded-xl p-10 mt-10">
+    <div class="flex items-center justify-between mb-6">
+      <h2 class="text-2xl font-semibold">📈 Resultados (médias reais)</h2>
+      <button id="btnAtualizar" class="px-4 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-700 transition">
+        🔄 Atualizar Gráfico
+      </button>
+    </div>
+    <canvas id="graficoResultados" height="120"></canvas>
+  </div>
+
   <!-- Firebase -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-    import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
+    import { getFirestore, collection, addDoc, getDocs } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyB1jA-lNvKKl9hR4ISSeIsx_ykopnE07Js",
@@ -206,13 +126,70 @@
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
 
+    // Colegas
+    const todosColegas = ["Keila","Ariel","Dante","Alex","Sayonara","Rafael","Marcus","Jaqueline","Glaucio","Lucélio","Eduardo"];
+    document.getElementById("respondente").addEventListener("change", function(){
+      const resp=this.value;
+      const secao=document.getElementById("secaoColegas");
+      const container=document.getElementById("colegas-container");
+      if(!resp){ secao.style.display="none"; return; }
+      const colegas=todosColegas.filter(n=>n!==resp);
+      container.innerHTML = colegas.map(nome=>{
+        return `<div class="p-4 border rounded bg-gray-50">
+          <h3 class="text-lg font-medium mb-2 text-indigo-700">${nome}</h3>
+          <label>Como você avalia a colaboração?</label><br>
+          <label><input type="radio" name="${nome}_colaboracao" value="1" required> Muito Insatisfatório</label>
+          <label><input type="radio" name="${nome}_colaboracao" value="2"> Insatisfatório</label>
+          <label><input type="radio" name="${nome}_colaboracao" value="3"> Regular</label>
+          <label><input type="radio" name="${nome}_colaboracao" value="4"> Satisfatório</label>
+          <label><input type="radio" name="${nome}_colaboracao" value="5"> Muito Satisfatório</label>
+        </div>`;
+      }).join("");
+      secao.style.display="block";
+    });
+
+    // Envio
     document.getElementById("form360").addEventListener("submit", async (e) => {
       e.preventDefault();
       const dados = Object.fromEntries(new FormData(e.target).entries());
       await addDoc(collection(db, "respostas"), dados);
       alert("✅ Avaliação registrada com sucesso!");
       e.target.reset();
+      document.getElementById("secaoColegas").style.display="none";
+      atualizarGrafico();
     });
+
+    // Gráfico
+    const ctx = document.getElementById("graficoResultados").getContext("2d");
+    const grafico = new Chart(ctx, {
+      type: "bar",
+      data: { labels: [], datasets: [{ label:"Média", data:[], backgroundColor:"rgba(79,70,229,0.6)" }] },
+      options: { scales: { y: { beginAtZero:true, max:5 } } }
+    });
+
+    async function atualizarGrafico(){
+      const snap = await getDocs(collection(db,"respostas"));
+      const linhas = snap.docs.map(d=>d.data());
+      const soma={}, count={};
+      linhas.forEach(resp=>{
+        for(const [k,v] of Object.entries(resp)){
+          const num=Number(v);
+          if(!isNaN(num)){
+            soma[k]=(soma[k]||0)+num;
+            count[k]=(count[k]||0)+1;
+          }
+        }
+      });
+      const medias={};
+      for(const k in soma) medias[k]=soma[k]/count[k];
+
+      grafico.data.labels = Object.keys(medias);
+      grafico.data.datasets[0].data = Object.values(medias);
+      grafico.update();
+    }
+
+    document.getElementById("btnAtualizar").addEventListener("click", atualizarGrafico);
+    atualizarGrafico();
   </script>
 </body>
 </html>
